--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,8 @@
     width: 22px;
     height: 22px;
 }
-.card-2{
-    margin-left: 80px;
-}
-.card-1{
-    margin-left: 155px;
+/* faq section */
+.faq-img{
+    width: 431px;
+    height: 423px;
 }
